# aicybops-framework

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.mlflow  README.md  TECHNICAL_REPORT.md  deploy.sh  deployment.env.example  docker-compose.yml  pyproject.toml  pytest.ini
aicybops-lib/: README.md  pyproject.toml
aicybops-lib/src/aicybops_lib/: __init__.py  torch_bootstrap.py
aicybops-lib/src/aicybops_lib/base_model/: __init__.py  base_model.py  registry.py
aicybops-lib/src/aicybops_lib/client/: __init__.py  client.py  config.py
aicybops-lib/src/aicybops_lib/server/: __init__.py  app.py  job_store_redis.py  monitoring.py  serialization.py  worker.py
aicybops-lib/src/aicybops_lib/server/utils/: __init__.py
aicybops-lib/src/aicybops_lib/tracking/: __init__.py  mlflow_logging.py
aicybops-lib/tests/: conftest.py  test_client.py  test_minio.py  test_server.py  test_tracking.py
aicybops-service/: Dockerfile
aicybops-service/src/: main.py  worker.py
aicybops_models/cnn_autoencoder/: call_api.py  cnn_autoencoder.py  full_cnn_ae.py
aicybops_models/dam_model/: .env.example  __init__.py
aicybops_models/modelos_uc/: .gitignore  README.md  anomalydetection_ae.py  golden_runs.csv  supervised_xgboost.py  testing_data.csv
scripts/: collect_evidence_bundle.py  deploy_model.py  deploy_model_modelos_uc.py  deploy_model_uc2.py  example_client.py  monitor_live.py  predict_live.py  predict_live_modelos_uc.py  predict_live_uc2.py  run_all_integrations.sh  service_url.py  smoke_test.py  smoke_train.sh  test_scripts.py
(+129 files in other folders)
